# ai-llm-red-team-handbook

./: .gitbook.yaml  .gitignore  1lKN1GHTFURY1  README.md  Visual_Recommendations_V2.md  _config.yml  audit_report.json  book.json  final_audit_report.json  fix_md040.py  generate_themed_visuals.py  health_report.txt  package-lock.json  package.json
docs/: AI LLM Red Team Hand book.md  AI LLM Red Team Handbook.md  (+65 more)
scripts/: README.md  (+13 more)
tools/prompt_injection_tester/: ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  RELEASE.md  SPECIFICATION.md  __init__.py  cli.py  pyproject.toml  run_pit_workflow.py
tools/prompt_injection_tester/core/: __init__.py  models.py  tester.py
tools/prompt_injection_tester/detection/: __init__.py  behavior_change.py  system_prompt.py  tool_misuse.py
tools/prompt_injection_tester/patterns/: __init__.py  base.py  registry.py
tools/prompt_injection_tester/patterns/advanced/: __init__.py  encoding.py  fragmentation.py  multi_turn.py
tools/prompt_injection_tester/patterns/direct/: __init__.py  delimiter_confusion.py  instruction_override.py  role_manipulation.py
tools/prompt_injection_tester/patterns/indirect/: __init__.py  document_poisoning.py  email_injection.py  web_injection.py
tools/prompt_injection_tester/pit/: README.md  __init__.py  __main__.py  app.py  cli.py
tools/prompt_injection_tester/pit/commands/: __init__.py  scan.py
tools/prompt_injection_tester/pit/config/: __init__.py  loader.py  schema.py
tools/prompt_injection_tester/pit/errors/: __init__.py  exceptions.py  handlers.py
tools/prompt_injection_tester/pit/orchestrator/: __init__.py  phases.py  pipeline.py  workflow.py
tools/prompt_injection_tester/pit/ui/: __init__.py  console.py  display.py  progress.py  spinner.py  styles.py  tables.py
tools/prompt_injection_tester/tests/: __init__.py  conftest.py  e2e_test.py  test_models.py
tools/prompt_injection_tester/tests/test_patterns/: __init__.py  test_direct_injection.py
tools/prompt_injection_tester/utils/: __init__.py  http_client.py
(+457 files in other folders)
